--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
+<html>
+	<head>
+		<link href="index.css" rel="stylesheet">
+		<title>Your name resume</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	</head>
 
+	<body>
+		<header id="header">
+			<!-- resume header with your name and title -->
+			<h1>PRARTHANA KHIARNAR</h1>
+			<hr>
+			RESUME
+			<hr>
+		</header>
+		<main>
+			<article id="mainLeft">
+				<section>
+					<h2>CONTACT</h2>
+					<!-- contact info including social media -->
+                    <p>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <a href="mailto:your-email@example.com">prathrnakhairnar@gmail.com</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                        <a href="github.com/gh-username">Prarthana-design26</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <a href="linkedin.com/linkedin-username">Prarthana Khairnar</a>
+                    </p>
+				</section>
+				<section>
+					<h2>SKILLS</h2>
+					<!-- your skills -->
+                    <p>HTML, CSS, Javascript,GitHub, VS Code...</p>
+				</section>
+				<section>
+					<h2>EDUCATION</h2>
+					<!-- your education -->
+                    <h3>3rd year Computer engineering student</h3>
+                    <p>
+                        PVG COET,Pune
+                    </p>
+                    <p>
+                        2021-2025
+                    </p>
+				</section>            
+			</article>
+			<article id="mainRight">
+				<section>
+					<h2>ABOUT</h2>
+					<!-- about you -->
+					<p>I am a computer engineering student.I have diffrent types of skills just like HTML,CSS,JAVSCRIPT,Basic Python.I wanted to do my career i web devlopement. </p>
+				</section>
+				<section>
+					<h2>WORK EXPERIENCE</h2>
+					<!-- your work experience -->
+                    <h3>Member of design team of EDC and ACES at PVG COET,Pune. </h3>
+                    
+                    
+				</section>
+			</article>
+		</main>
+	</body>
+</html>
